﻿1.64:
  AR: Fixed translations, moved everything into resx, refactoring, namespace renamed to mRemoteNG

1.63:
  New icon and logo
  Fixed problems moving or resizing the main window while PuTTY (SSH/telnet/rlogin/raw) connections are open
  Fixed PuTTY processes not closing on Vista and 7 with UAC enabled
  Updated DockPanel Suite from 2.2.0 to 2.3.1
  Fixed error if the mouse is clicked outside of the remote screen area of a VNC connection
  Fixed flashing and red lines at bottom of the window on first run
  Added View->Reset Layout menu item
  Added F11 shortcut key to View->Full Screen
  Improved RDP error reporting
  Added support for Credential Security Support Provider (CredSSP) which is required for Network Level Authentication (NLA)
  Added support for connecting through Remote Desktop Gateway servers
  Popups can now be allowed in Internet Explorer by holding Ctrl+Alt when clicking a link
  Added PuTTY Settings item to tab context menu

1.62:
  Switched to VncSharp, an open source VNC component
  VNC is supported again except for the following features:
    Windows authentication
    Setting the compression, encoding and color settings
    Connecting through a proxy server
    Free SmartSize mode (it does the same thing as Aspect SmartSize mode now)
  Rearranged the Options page and added an Updates tab
  Added option to change how often updates are checked
  Open Updates options tab before connecting for the first time
  No longer show About page on first run
  Renamed Quicky toolbar to Quick Connect toolbar
  Changed back to allowing toolbars to dock to the left or right of the menu bar and added gripper to move it around
  Added RDP, VNC and ICA version numbers to Components Check page
  Fixed a bug with the inheritance buttons on the Config panel disappearing after awhile

1.61:
  Removed unlicensed SmartCode Solutions ViewerX VNC Viewer ActiveX
  This version of mRemoteNG does not support VNC

1.60:
  Changed name to mRemoteNG